# xcapi

./: .gitignore  .replit  LICENSE  README.md  example.py  pyproject.toml  replit.md
xc_dl/: __init__.py  cli.py  client.py  downloader.py  query.py
xcapi/: __init__.py  cli.py  client.py  downloader.py  query.py
