[project]
name = "xc-dl"
version = "0.1.0"
description = "A command-line and programmatic downloader for the Xeno-canto API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "xc-dl contributors"}
]
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
xc-dl = "xc_dl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
